@@ -20,10 +20,13 @@ lazy val client = (project in file("client"))
   )
   .dependsOn(root)
 
+Compile / run / fork := true
+
 lazy val root = (project in file(".")).settings(
   name := "fpms",
   version := "0.1",
   scalaVersion := "2.12.10",
+  fork in Runtime := true,
   libraryDependencies ++= Seq(
     "org.specs2" %% "specs2-core" % Specs2Version % "test",
     "org.typelevel" %% "cats-effect" % "2.0.0",
@@ -40,7 +43,16 @@ lazy val root = (project in file(".")).settings(
   addCompilerPlugin("org.typelevel" %% "kind-projector" % "0.10.3"),
   addCompilerPlugin("com.olegpy" %% "better-monadic-for" % "0.3.0"),
   scalacOptions := defaultscalacOptions,
-  javaOptions in Runtime ++= Seq("-Dlog4j2.debug","-XX:+UseG1GC")
+)
+
+run / javaOptions := Seq(
+  "-verbose:gc.log",
+  "-Xlog:gc*:file=logs/gc/gc_%t_%p.log:time,uptime,level,tags",
+  "-XX:+UseG1GC",
+  "-XX:MaxRAMPercentage=80",
+  "-XX:-UseCompressedOops",
+  "-XX:+HeapDumpOnOutOfMemoryError",
+  "-XX:HeapDumpPath=dump.log"
 )
 
 lazy val http4sDeps = Seq(
@@ -84,5 +96,5 @@ lazy val defaultscalacOptions = Seq(
   "-feature",
   "-Ypartial-unification",
   "-Xfatal-warnings",
-  "log4j2.debug",
+  "log4j2.debug"
 )
